lab finished with new exports

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "4    Valid           L6 -33.16667  -64.95000  1902-01-01T00:00:00.000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "Name: fall, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,12 +272,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "nasa.to_json('nasa.json',orient='records')"
+    "nasa.to_json('nasa_dani.json',orient='records')"
    ]
   },
   {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "55      1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,12 +456,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "shuttle.to_csv('shuttle.csv')"
+    "shuttle.to_csv('shuttle_dani.csv')"
    ]
   },
   {
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
        "4                               Gemini 12, Apollo 11        NaT           NaN  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,77 +710,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Physics                                             35\n",
-       "Aerospace Engineering                               33\n",
-       "Mechanical Engineering                              30\n",
-       "Aeronautical Engineering                            28\n",
-       "Electrical Engineering                              23\n",
-       "Engineering Science                                 13\n",
-       "Engineering                                         12\n",
-       "Mathematics                                         11\n",
-       "Chemistry                                           10\n",
-       "Chemical Engineering                                 9\n",
-       "Naval Sciences                                       9\n",
-       "Astronautical Engineering                            8\n",
-       "Aeronautical & Astronautical Engineering             6\n",
-       "Geology                                              5\n",
-       "Biology                                              5\n",
-       "Civil Engineering                                    5\n",
-       "Mathematics & Physics                                5\n",
-       "Physics & Astronomy                                  4\n",
-       "Applied Science & Engineering                        4\n",
-       "Aeronautics & Astronautics                           3\n",
-       "Engineering Physics                                  3\n",
-       "Computer Science                                     3\n",
-       "Applied Mathematics                                  3\n",
-       "Physics & Mathematics                                2\n",
-       "Zoology                                              2\n",
-       "Engineering Management                               2\n",
-       "Engineering Mechanics                                2\n",
-       "Ocean Engineering                                    2\n",
-       "Chemistry & Biology                                  2\n",
-       "Biological Science                                   2\n",
-       "                                                    ..\n",
-       "Nuclear Engineering                                  1\n",
-       "Mathematical & Electrical Science                    1\n",
-       "Astronautics                                         1\n",
-       "Astronomy                                            1\n",
-       "Systems Engineering                                  1\n",
-       "Molecular Biology                                    1\n",
-       "Computer & Systems Engineering                       1\n",
-       "Mechanical & Aeronautical Engineering                1\n",
-       "Human Biology                                        1\n",
-       "Ecological Science                                   1\n",
-       "Animal Nutrition                                     1\n",
-       "Physics & Mechanical Engineering                     1\n",
-       "Music                                                1\n",
-       "Physical Science                                     1\n",
-       "Accounting                                           1\n",
-       "Mathematics & Statistics; Chemistry                  1\n",
-       "Military Science                                     1\n",
-       "Philosophy                                           1\n",
-       "Engineering Sciences; Astronautics & Mathematics     1\n",
-       "Bioscience                                           1\n",
-       "Ceramic Engineering                                  1\n",
-       "Mathematics; Russian                                 1\n",
-       "Biochemistry                                         1\n",
-       "Physiology                                           1\n",
-       "Industrial Engineering                               1\n",
-       "Biology & Psychology                                 1\n",
-       "Electrical Science                                   1\n",
-       "Animal Science                                       1\n",
-       "Economics                                            1\n",
-       "Electronics Engineering                              1\n",
+       "Physics                                                                35\n",
+       "Aerospace Engineering                                                  33\n",
+       "Mechanical Engineering                                                 30\n",
+       "Aeronautical Engineering                                               28\n",
+       "Electrical Engineering                                                 23\n",
+       "Engineering Science                                                    13\n",
+       "Engineering                                                            12\n",
+       "Mathematics                                                            11\n",
+       "Chemistry                                                              10\n",
+       "Chemical Engineering                                                    9\n",
+       "Naval Sciences                                                          9\n",
+       "Astronautical Engineering                                               8\n",
+       "Aeronautical & Astronautical Engineering                                6\n",
+       "Civil Engineering                                                       5\n",
+       "Biology                                                                 5\n",
+       "Mathematics & Physics                                                   5\n",
+       "Geology                                                                 5\n",
+       "Physics & Astronomy                                                     4\n",
+       "Applied Science & Engineering                                           4\n",
+       "Engineering Physics                                                     3\n",
+       "Aeronautics & Astronautics                                              3\n",
+       "Applied Mathematics                                                     3\n",
+       "Computer Science                                                        3\n",
+       "Ocean Engineering                                                       2\n",
+       "Engineering Management                                                  2\n",
+       "Biological Science                                                      2\n",
+       "Chemistry & Biology                                                     2\n",
+       "Physics & Mathematics                                                   2\n",
+       "Education                                                               2\n",
+       "Engineering Mechanics                                                   2\n",
+       "                                                                       ..\n",
+       "Military Engineering                                                    1\n",
+       "Business Finance                                                        1\n",
+       "Ecological Science                                                      1\n",
+       "Astronautics                                                            1\n",
+       "Animal Nutrition                                                        1\n",
+       "Ceramic Engineering                                                     1\n",
+       "Solid Earth Sciences                                                    1\n",
+       "Biology & Psychology                                                    1\n",
+       "Mechanical & Aeronautical Engineering                                   1\n",
+       "Engineering Sciences; Astronautics & Mathematics                        1\n",
+       "Animal Science                                                          1\n",
+       "Human Biology                                                           1\n",
+       "Military Science                                                        1\n",
+       "Chemistry; Physiological Optics                                         1\n",
+       "Industrial Engineering                                                  1\n",
+       "Electrical Engineering; Computer Science                                1\n",
+       "Mathematical & Electrical Science                                       1\n",
+       "Physics & Engineering                                                   1\n",
+       "Music                                                                   1\n",
+       "Industrial Management                                                   1\n",
+       "Business Economics                                                      1\n",
+       "Electrical Science                                                      1\n",
+       "Aerospace Engineering & Mechanics                                       1\n",
+       "Mathematics; Russian                                                    1\n",
+       "Physiology                                                              1\n",
+       "Bioscience                                                              1\n",
+       "Biochemistry                                                            1\n",
+       "Aeronautics & Astronautics; Earth, Atmospheric & Planetary Sciences     1\n",
+       "Accounting                                                              1\n",
+       "Nuclear Engineering                                                     1\n",
        "Name: Undergraduate Major, Length: 83, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,12 +800,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "astronaut.to_csv('astronaut.csv',index=False)"
+    "astronaut.to_csv('astronaut_dani.csv',index=False)"
    ]
   },
   {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
        "4                 0           0.8       -1         0.50      O  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
