--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -337,18 +337,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T14:18:07.644150Z",
-     "start_time": "2020-01-25T14:18:05.561423Z"
+     "end_time": "2020-01-25T16:00:44.930571Z",
+     "start_time": "2020-01-25T16:00:43.072952Z"
     }
    },
    "outputs": [],
    "source": [
     "# Your code here:\n",
     "\n",
-    "shuttle = pd.read_csv(tst_url, sep = \" \")"
+    "shuttle = pd.read_csv(tst_url, sep = \" \", names = cols)"
    ]
   },
   {
@@ -360,11 +360,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T14:18:09.136986Z",
-     "start_time": "2020-01-25T14:18:09.112685Z"
+     "end_time": "2020-01-25T16:00:50.998182Z",
+     "start_time": "2020-01-25T16:00:50.959906Z"
     }
    },
    "outputs": [
@@ -389,21 +389,31 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>55</th>\n",
-       "      <th>0</th>\n",
-       "      <th>81</th>\n",
-       "      <th>0.1</th>\n",
-       "      <th>-6</th>\n",
-       "      <th>11</th>\n",
-       "      <th>25</th>\n",
-       "      <th>88</th>\n",
-       "      <th>64</th>\n",
-       "      <th>4</th>\n",
+       "      <th>time</th>\n",
+       "      <th>rad_flow</th>\n",
+       "      <th>fpv_close</th>\n",
+       "      <th>fpv_open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>bypass</th>\n",
+       "      <th>bpv_close</th>\n",
+       "      <th>bpv_open</th>\n",
+       "      <th>class</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <td>55</td>\n",
        "      <td>0</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>25</td>\n",
+       "      <td>88</td>\n",
+       "      <td>64</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>56</td>\n",
        "      <td>0</td>\n",
        "      <td>96</td>\n",
@@ -416,7 +426,6 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
        "      <td>50</td>\n",
        "      <td>-1</td>\n",
        "      <td>89</td>\n",
@@ -429,7 +438,6 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
        "      <td>53</td>\n",
        "      <td>9</td>\n",
        "      <td>79</td>\n",
@@ -442,7 +450,6 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
        "      <td>55</td>\n",
        "      <td>2</td>\n",
        "      <td>82</td>\n",
@@ -454,33 +461,27 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>41</td>\n",
-       "      <td>0</td>\n",
-       "      <td>84</td>\n",
-       "      <td>3</td>\n",
-       "      <td>38</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>43</td>\n",
-       "      <td>45</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   55  0  81  0.1  -6  11  25  88  64  4\n",
-       "0  56  0  96    0  52  -4  40  44   4  4\n",
-       "1  50 -1  89   -7  50   0  39  40   2  1\n",
-       "2  53  9  79    0  42  -2  25  37  12  4\n",
-       "3  55  2  82    0  54  -6  26  28   2  1\n",
-       "4  41  0  84    3  38  -4  43  45   2  1"
+       "    time  rad_flow  fpv_close  fpv_open  high  bypass  bpv_close  bpv_open  \\\n",
+       "55     0        81          0        -6    11      25         88        64   \n",
+       "56     0        96          0        52    -4      40         44         4   \n",
+       "50    -1        89         -7        50     0      39         40         2   \n",
+       "53     9        79          0        42    -2      25         37        12   \n",
+       "55     2        82          0        54    -6      26         28         2   \n",
+       "\n",
+       "    class  \n",
+       "55      4  \n",
+       "56      4  \n",
+       "50      1  \n",
+       "53      4  \n",
+       "55      1  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
