--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -780,18 +780,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Season in which the analysis was performed. 1) winter, 2) spring, 3) Summer, 4) fall. (-1, -0.33, 0.33, 1)\n",
+    "\n",
+    "Age at the time of analysis. 18-36 (0, 1)\n",
+    "\n",
+    "Childish diseases (ie , chicken pox, measles, mumps, polio) 1) yes, 2) no. (0, 1)\n",
+    "\n",
+    "Accident or serious trauma 1) yes, 2) no. (0, 1)\n",
+    "\n",
+    "Surgical intervention 1) yes, 2) no. (0, 1)\n",
+    "\n",
+    "High fevers in the last year 1) less than three months ago, 2) more than three months ago, 3) no. (-1, 0, 1)\n",
+    "\n",
+    "Frequency of alcohol consumption 1) several times a day, 2) every day, 3) several times a week, 4) once a week, 5) hardly ever or never (0, 1)\n",
+    "\n",
+    "Smoking habit 1) never, 2) occasional 3) daily. (-1, 0, 1)\n",
+    "\n",
+    "Number of hours spent sitting per day ene-16 (0, 1)\n",
+    "\n",
+    "Output: Diagnosis normal (N), altered (O)\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "cols = ['Season', 'Age', 'Childish diseases', 'Accident', 'Surgical intervention', 'High fevers', 'Frequency of alcohol', 'Smoking', 'Number of hours spent sitting','Output']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
     "\n",
-    "fertility = pd.read_csv('fertility_Diagnosis.txt', sep=',')"
+    "fertility = pd.read_csv('fertility_Diagnosis.txt', sep=',', header =None, names = cols)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -815,21 +847,34 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>-0.33</th>\n",
-       "      <th>0.69</th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>1.1</th>\n",
-       "      <th>0.1</th>\n",
-       "      <th>0.8</th>\n",
-       "      <th>0.2</th>\n",
-       "      <th>0.88</th>\n",
-       "      <th>N</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Childish diseases</th>\n",
+       "      <th>Accident</th>\n",
+       "      <th>Surgical intervention</th>\n",
+       "      <th>High fevers</th>\n",
+       "      <th>Frequency of alcohol</th>\n",
+       "      <th>Smoking</th>\n",
+       "      <th>Number of hours spent sitting</th>\n",
+       "      <th>Output</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>-0.33</td>\n",
        "      <td>0.94</td>\n",
        "      <td>1</td>\n",
@@ -842,7 +887,7 @@
        "      <td>O</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>-0.33</td>\n",
        "      <td>0.50</td>\n",
        "      <td>1</td>\n",
@@ -855,7 +900,7 @@
        "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>-0.33</td>\n",
        "      <td>0.75</td>\n",
        "      <td>0</td>\n",
@@ -868,7 +913,7 @@
        "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>-0.33</td>\n",
        "      <td>0.67</td>\n",
        "      <td>1</td>\n",
@@ -881,7 +926,7 @@
        "      <td>O</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>-0.33</td>\n",
        "      <td>0.67</td>\n",
        "      <td>1</td>\n",
@@ -894,7 +939,7 @@
        "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>-0.33</td>\n",
        "      <td>0.67</td>\n",
        "      <td>0</td>\n",
@@ -907,7 +952,7 @@
        "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>7</th>\n",
        "      <td>-0.33</td>\n",
        "      <td>1.00</td>\n",
        "      <td>1</td>\n",
@@ -920,7 +965,7 @@
        "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>8</th>\n",
        "      <td>1.00</td>\n",
        "      <td>0.64</td>\n",
        "      <td>0</td>\n",
@@ -933,7 +978,7 @@
        "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "      <td>1.00</td>\n",
        "      <td>0.61</td>\n",
        "      <td>1</td>\n",
@@ -945,38 +990,49 @@
        "      <td>0.25</td>\n",
        "      <td>N</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>N</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   -0.33  0.69  0  1  1.1  0.1  0.8  0.2  0.88  N\n",
-       "0  -0.33  0.94  1  0    1    0  0.8    1  0.31  O\n",
-       "1  -0.33  0.50  1  0    0    0  1.0   -1  0.50  N\n",
-       "2  -0.33  0.75  0  1    1    0  1.0   -1  0.38  N\n",
-       "3  -0.33  0.67  1  1    0    0  0.8   -1  0.50  O\n",
-       "4  -0.33  0.67  1  0    1    0  0.8    0  0.50  N\n",
-       "5  -0.33  0.67  0  0    0   -1  0.8   -1  0.44  N\n",
-       "6  -0.33  1.00  1  1    1    0  0.6   -1  0.38  N\n",
-       "7   1.00  0.64  0  0    1    0  0.8   -1  0.25  N\n",
-       "8   1.00  0.61  1  0    0    0  1.0   -1  0.25  N\n",
-       "9   1.00  0.67  1  1    0   -1  0.8    0  0.31  N"
+       "   Season   Age  Childish diseases  Accident  Surgical intervention  \\\n",
+       "0   -0.33  0.69                  0         1                      1   \n",
+       "1   -0.33  0.94                  1         0                      1   \n",
+       "2   -0.33  0.50                  1         0                      0   \n",
+       "3   -0.33  0.75                  0         1                      1   \n",
+       "4   -0.33  0.67                  1         1                      0   \n",
+       "5   -0.33  0.67                  1         0                      1   \n",
+       "6   -0.33  0.67                  0         0                      0   \n",
+       "7   -0.33  1.00                  1         1                      1   \n",
+       "8    1.00  0.64                  0         0                      1   \n",
+       "9    1.00  0.61                  1         0                      0   \n",
+       "\n",
+       "   High fevers  Frequency of alcohol  Smoking  Number of hours spent sitting  \\\n",
+       "0            0                   0.8        0                           0.88   \n",
+       "1            0                   0.8        1                           0.31   \n",
+       "2            0                   1.0       -1                           0.50   \n",
+       "3            0                   1.0       -1                           0.38   \n",
+       "4            0                   0.8       -1                           0.50   \n",
+       "5            0                   0.8        0                           0.50   \n",
+       "6           -1                   0.8       -1                           0.44   \n",
+       "7            0                   0.6       -1                           0.38   \n",
+       "8            0                   0.8       -1                           0.25   \n",
+       "9            0                   1.0       -1                           0.25   \n",
+       "\n",
+       "  Output  \n",
+       "0      N  \n",
+       "1      O  \n",
+       "2      N  \n",
+       "3      N  \n",
+       "4      O  \n",
+       "5      N  \n",
+       "6      N  \n",
+       "7      N  \n",
+       "8      N  \n",
+       "9      N  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
