--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -21,14 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your import here:\n",
-    "\n"
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -42,10 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run this code\n",
@@ -66,13 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
+    "nasa = pd.read_json(json_data)\n",
     "\n"
    ]
   },
@@ -85,13 +81,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>id</th>\n",
+       "      <th>nametype</th>\n",
+       "      <th>recclass</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>fall</th>\n",
+       "      <th>year</th>\n",
+       "      <th>reclat</th>\n",
+       "      <th>reclong</th>\n",
+       "      <th>geolocation</th>\n",
+       "      <th>:@computed_region_cbhk_fwbd</th>\n",
+       "      <th>:@computed_region_nnqa_25f4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Aachen</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L5</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>1880-01-01T00:00:00.000</td>\n",
+       "      <td>50.77500</td>\n",
+       "      <td>6.08333</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [6.08333, 50....</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Aarhus</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>H6</td>\n",
+       "      <td>720.0</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>1951-01-01T00:00:00.000</td>\n",
+       "      <td>56.18333</td>\n",
+       "      <td>10.23333</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [10.23333, 56...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Abee</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>EH4</td>\n",
+       "      <td>107000.0</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>1952-01-01T00:00:00.000</td>\n",
+       "      <td>54.21667</td>\n",
+       "      <td>-113.00000</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-113, 54.216...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Acapulco</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>Acapulcoite</td>\n",
+       "      <td>1914.0</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>1976-01-01T00:00:00.000</td>\n",
+       "      <td>16.88333</td>\n",
+       "      <td>-99.90000</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-99.9, 16.88...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Achiras</td>\n",
+       "      <td>370</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L6</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>1902-01-01T00:00:00.000</td>\n",
+       "      <td>-33.16667</td>\n",
+       "      <td>-64.95000</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-64.95, -33....</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name   id nametype     recclass      mass  fall  \\\n",
+       "0    Aachen    1    Valid           L5      21.0  Fell   \n",
+       "1    Aarhus    2    Valid           H6     720.0  Fell   \n",
+       "2      Abee    6    Valid          EH4  107000.0  Fell   \n",
+       "3  Acapulco   10    Valid  Acapulcoite    1914.0  Fell   \n",
+       "4   Achiras  370    Valid           L6     780.0  Fell   \n",
+       "\n",
+       "                      year    reclat    reclong  \\\n",
+       "0  1880-01-01T00:00:00.000  50.77500    6.08333   \n",
+       "1  1951-01-01T00:00:00.000  56.18333   10.23333   \n",
+       "2  1952-01-01T00:00:00.000  54.21667 -113.00000   \n",
+       "3  1976-01-01T00:00:00.000  16.88333  -99.90000   \n",
+       "4  1902-01-01T00:00:00.000 -33.16667  -64.95000   \n",
+       "\n",
+       "                                         geolocation  \\\n",
+       "0  {'type': 'Point', 'coordinates': [6.08333, 50....   \n",
+       "1  {'type': 'Point', 'coordinates': [10.23333, 56...   \n",
+       "2  {'type': 'Point', 'coordinates': [-113, 54.216...   \n",
+       "3  {'type': 'Point', 'coordinates': [-99.9, 16.88...   \n",
+       "4  {'type': 'Point', 'coordinates': [-64.95, -33....   \n",
+       "\n",
+       "   :@computed_region_cbhk_fwbd  :@computed_region_nnqa_25f4  \n",
+       "0                          NaN                          NaN  \n",
+       "1                          NaN                          NaN  \n",
+       "2                          NaN                          NaN  \n",
+       "3                          NaN                          NaN  \n",
+       "4                          NaN                          NaN  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
+    "nasa.head()\n",
     "\n"
    ]
   },
@@ -106,14 +251,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Fell     996\n",
+       "Found      4\n",
+       "Name: fall, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
+    "nasa['fall'].value_counts()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Valid    1000\n",
+       "Name: nametype, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nasa['nametype'].value_counts()"
    ]
   },
   {
@@ -125,13 +303,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
+    "nasa.to_json('nasa.json', orient='records')\n",
     "\n"
    ]
   },
@@ -148,10 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run this code:\n",
@@ -162,14 +337,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "shuttle = pd.read_csv(tst_url, names=cols, sep=' ')"
    ]
   },
   {
@@ -181,14 +355,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>rad_flow</th>\n",
+       "      <th>fpv_close</th>\n",
+       "      <th>fpv_open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>bypass</th>\n",
+       "      <th>bpv_close</th>\n",
+       "      <th>bpv_open</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>55</td>\n",
+       "      <td>0</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>25</td>\n",
+       "      <td>88</td>\n",
+       "      <td>64</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>40</td>\n",
+       "      <td>44</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>89</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>53</td>\n",
+       "      <td>9</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>25</td>\n",
+       "      <td>37</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>55</td>\n",
+       "      <td>2</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>26</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    time  rad_flow  fpv_close  fpv_open  high  bypass  bpv_close  bpv_open  \\\n",
+       "55     0        81          0        -6    11      25         88        64   \n",
+       "56     0        96          0        52    -4      40         44         4   \n",
+       "50    -1        89         -7        50     0      39         40         2   \n",
+       "53     9        79          0        42    -2      25         37        12   \n",
+       "55     2        82          0        54    -6      26         28         2   \n",
+       "\n",
+       "    class  \n",
+       "55      4  \n",
+       "56      4  \n",
+       "50      1  \n",
+       "53      4  \n",
+       "55      1  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle.head()\n"
    ]
   },
   {
@@ -200,14 +490,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle.to_csv('shuttle.csv',\n",
+    "               sep =',',\n",
+    "               index=False)"
    ]
   },
   {
@@ -337,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
